--- a/dudes-admin-portal/css/styles.css
+++ b/dudes-admin-portal/css/styles.css
@@ -1,3 +1,10 @@
+.Form-Handle input[type=text],
+.Form-Handle select,
+.Form-Handle textarea {
+   float: right;
+   width: 45%;
+}
+
 .invoice-template .rightalign { text-align: right; }
 .invoice-template th { white-space: nowrap; }
 .invoice-template td,
@@ -5,3 +12,4 @@
 .invoice-template .invoice-total { text-align: right; font-weight: bold; }
 .invoice-template td input { float: none !important; width: 80% !important; }
 .invoice-template .line-items .remove { margin-right: 6px; }
+.invoice-template .notes { margin: 2rem 0; }
